// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondPillarStatusBox renders high fee flow when fund selection incomplete 1`] = `
<HighFee
  conversion={
    Object {
      "selectionComplete": false,
      "selectionPartial": false,
      "weightedAverageFee": 0.0051,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "LHV",
        },
        "isin": "EE432432",
        "managementFeePercent": 0.015,
        "name": "LHV High Cost Fund II",
        "ongoingChargesFigure": 0.0156,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 20000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders high fee message when in high fee fund and no partial conversion 1`] = `
<HighFee
  conversion={
    Object {
      "selectionComplete": false,
      "selectionPartial": false,
      "transfersComplete": false,
      "transfersPartial": false,
      "weightedAverageFee": 0.01,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "LHV",
        },
        "isin": "EE432432",
        "managementFeePercent": 0.015,
        "name": "LHV High Cost Fund II",
        "ongoingChargesFigure": 0.0156,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 20000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders low fee when fund selection incomplete 1`] = `
<InLowFeeFund
  conversion={
    Object {
      "selectionComplete": false,
      "selectionPartial": false,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders no 2nd pillar flow when no second pillar 1`] = `
<SecondPillarMissing
  conversion={
    Object {
      "contribution": Object {
        "lastYear": 100,
        "total": 37000,
        "yearToDate": 2500,
      },
      "paymentComplete": true,
      "pendingWithdrawal": false,
      "selectionComplete": true,
      "selectionPartial": true,
      "subtraction": Object {
        "lastYear": 0,
        "total": 0,
        "yearToDate": 0,
      },
      "transfersComplete": true,
      "transfersPartial": true,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the bond fund nudge 1`] = `
<FullyConvertedToTulevaBonds
  conversion={
    Object {
      "contribution": Object {
        "lastYear": 100,
        "total": 37000,
        "yearToDate": 2500,
      },
      "paymentComplete": true,
      "pendingWithdrawal": false,
      "selectionComplete": true,
      "selectionPartial": true,
      "subtraction": Object {
        "lastYear": 0,
        "total": 0,
        "yearToDate": 0,
      },
      "transfersComplete": true,
      "transfersPartial": true,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE3600109443",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Võlakirjad",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the payment rate flow 1`] = `
<IncreasePaymentRate
  conversion={
    Object {
      "contribution": Object {
        "lastYear": 100,
        "total": 37000,
        "yearToDate": 2500,
      },
      "paymentComplete": true,
      "pendingWithdrawal": false,
      "selectionComplete": true,
      "selectionPartial": true,
      "subtraction": Object {
        "lastYear": 0,
        "total": 0,
        "yearToDate": 0,
      },
      "transfersComplete": true,
      "transfersPartial": true,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={2}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={2}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the payment rate flow 2`] = `
<IncreasePaymentRate
  conversion={
    Object {
      "contribution": Object {
        "lastYear": 100,
        "total": 37000,
        "yearToDate": 2500,
      },
      "paymentComplete": true,
      "pendingWithdrawal": false,
      "selectionComplete": true,
      "selectionPartial": true,
      "subtraction": Object {
        "lastYear": 0,
        "total": 0,
        "yearToDate": 0,
      },
      "transfersComplete": true,
      "transfersPartial": true,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={2}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the success flow 1`] = `
<FullyConvertedToTuleva
  conversion={
    Object {
      "contribution": Object {
        "lastYear": 100,
        "total": 37000,
        "yearToDate": 2500,
      },
      "paymentComplete": true,
      "pendingWithdrawal": false,
      "selectionComplete": true,
      "selectionPartial": true,
      "subtraction": Object {
        "lastYear": 0,
        "total": 0,
        "yearToDate": 0,
      },
      "transfersComplete": true,
      "transfersPartial": true,
      "weightedAverageFee": 0.0049,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the transfer flow when fund transfers incomplete 1`] = `
<HighFee
  conversion={
    Object {
      "selectionComplete": true,
      "selectionPartial": true,
      "transfersComplete": false,
      "transfersPartial": false,
      "weightedAverageFee": 0.01,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;

exports[`SecondPillarStatusBox renders the withdrawal flow when withdrawal is in progress 1`] = `
<PendingPartialWithdrawalOrFundPension
  conversion={
    Object {
      "pendingWithdrawal": true,
    }
  }
  currentPaymentRate={6}
  loading={false}
  mandateDeadlines={
    Object {
      "periodEnding": "2024-07-31T00:59:59.999999999Z",
    }
  }
  pendingPaymentRate={6}
  sourceFunds={
    Array [
      Object {
        "activeFund": true,
        "contributions": 500,
        "currency": "EUR",
        "fundManager": Object {
          "name": "Tuleva",
        },
        "isin": "EE000123",
        "managementFeePercent": 0.003,
        "name": "Tuleva II Samba Pensionifond",
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "price": 20000,
        "profit": 500,
        "subtractions": 0,
        "unavailablePrice": 0,
        "units": 10000,
      },
    ]
  }
  targetFunds={
    Array [
      Object {
        "fundManager": Object {
          "name": "Tuleva",
        },
        "inceptionDate": "2017-01-01",
        "isin": "EE123",
        "managementFeeRate": 0.003,
        "name": "Tuleva II Samba Fond",
        "nav": 1,
        "ongoingChargesFigure": 0.0049,
        "pillar": 2,
        "status": "ACTIVE",
      },
    ]
  }
/>
`;
